# django-boilerplate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  entrypoint.sh  manage.py  pyproject.toml
core/project/: asgi.py  urls.py  wsgi.py
core/project/settings/: base.py
docker_compose/: app.yaml  storages.yaml
project/: wsgi.py
project/settings/: base.py
