[tool.poetry]
name = "template"
version = "0.1.0"
description = "_"
authors = ["Vlad Smek <smek1negithub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# Global
multi_line_output = 3
include_trailing_comma = true
line_length = 120
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
force_grid_wrap = 2

# Local
src_paths = ["core", "tests"]

skip_glob = [
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
]

# Known
known_django = ["django"]
known_first_party = ["core"]

# Sections
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]